[project]
name = "rezabots"
version = "0.1.0"
description = "Admin Telegram bot for managing Telegram account logins on a single server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "python-telegram-bot[socks]>=21.0",
  "telethon>=1.36",
  "python-dotenv>=1.0",
  "aiomysql>=0.2",
  "psutil>=5.9",
]

[project.scripts]
rezabots = "main:main"
